--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/FedorovD/webpack-tasks#readme",
   "devDependencies": {
-    "webpack": "^3.6.0"
+    "css-loader": "^0.28.7",
+    "csv-loader": "^2.1.1",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.6.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.4"
