--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-tasks",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/webpack-numbers.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -14,6 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/FedorovD/webpack-tasks.git"
   },
+  "module": "src/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
