--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "csv-loader": "^2.1.1",
+    "exports-loader": "^0.6.4",
     "express": "^4.16.1",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "imports-loader": "^0.7.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.6.0",
@@ -38,6 +40,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "babel-polyfill": "^6.26.0",
+    "lodash": "^4.17.4",
+    "whatwg-fetch": "^2.0.3"
   }
 }
