--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "webpack-tasks",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/webpack-numbers.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "server": "node server.js",
     "build": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FedorovD/webpack-tasks.git"
   },
-  "module": "src/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,25 +17,10 @@
   },
   "homepage": "https://github.com/FedorovD/webpack-tasks#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "csv-loader": "^2.1.1",
-    "exports-loader": "^0.6.4",
-    "express": "^4.16.1",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "imports-loader": "^0.7.1",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "xml-loader": "^1.2.1"
+    "@types/lodash": "^4.14.77",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.5.3",
+    "webpack": "^3.6.0"
   },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "lodash": "^4.17.4",
-    "whatwg-fetch": "^2.0.3"
-  }
+  "dependencies": {}
 }
