--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --env.NODE_ENV=local --env.production --progress"
   },
   "repository": {
     "type": "git",
